readme red DMS to DND in navbar add screenshot

--- a/home_page/templates/home_page/navbar.html
+++ b/home_page/templates/home_page/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background: var(--dnd-dark); border-bottom: 3px solid var(--dnd-gold);">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="font-family: 'MedievalSharp', cursive;">
-            <i class="fa-solid fa-dragon me-2"></i>DMS Campaign Hub
+            <i class="fa-solid fa-dragon me-2"></i>DND Campaign Hub
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
             <span class="navbar-toggler-icon"></span>
